Revert "fix about section layout shift when typewriter starts"
This reverts commit 9587635078744107411aca74f796894bd893cfc4.

--- a/src/components/sections/About/About.module.css
+++ b/src/components/sections/About/About.module.css
@@ -89,7 +89,6 @@
 .name {
   margin: 0 0 1rem;
   line-height: 1.05;
-  min-height: calc(clamp(2.5rem, 5vw, 4rem) * 1.05);
 }
 
 .nameSolid {
